# go-common

./: .bazelrc  .gitignore  Dockerfile.bili  Makefile  Nginx  README.md  TODO.md  docker-compose.yaml  go.mod  go.sum  nginx.conf
.gitlab/merge_request_templates/: Common.md
app/admin/bbq/comment/: README.md
app/admin/bbq/comment/cmd/: BUILD
app/admin/ep/marthe/: README.md
app/admin/ep/marthe/cmd/: BUILD
app/admin/ep/marthe/conf/: BUILD
app/admin/ep/marthe/dao/: BUILD
app/admin/ep/marthe/model/: BUILD
app/admin/ep/marthe/service/: BUILD
app/admin/ep/melloi/cmd/: BUILD
app/admin/ep/melloi/conf/: BUILD
app/admin/ep/melloi/dao/: BUILD
app/admin/ep/melloi/http/: BUILD
app/admin/ep/melloi/model/: BUILD
app/admin/ep/melloi/service/: BUILD
app/admin/ep/melloi/service/proto/: BUILD.bazel
app/admin/ep/merlin/cmd/: BUILD
app/admin/ep/merlin/conf/: BUILD
app/admin/ep/merlin/dao/: BUILD
app/admin/ep/merlin/http/: BUILD
app/admin/ep/merlin/model/: BUILD
app/admin/ep/merlin/service/: BUILD
app/admin/ep/saga/cmd/: BUILD
app/admin/ep/saga/conf/: BUILD
app/admin/ep/saga/dao/: BUILD
app/admin/ep/saga/http/: BUILD
app/admin/ep/saga/model/: BUILD
app/admin/ep/saga/service/: BUILD
app/admin/live/live-admin/: README.md
app/admin/main/activity/: BUILD
app/admin/main/cache/: BUILD
app/admin/main/coupon/: BUILD
app/admin/main/credit/: BUILD
app/admin/main/esports/: BUILD
app/admin/main/filter/: BUILD
app/admin/main/laser/: BUILD
app/admin/main/member/: BUILD
app/admin/main/passport/: BUILD
app/admin/main/point/: BUILD
app/admin/main/reply/: BUILD
app/admin/main/tag/: BUILD
app/admin/main/upload/: BUILD
app/admin/main/vip/: BUILD
app/common/openplatform/encoding/: BUILD
app/common/openplatform/random/: BUILD
app/infra/canal/cmd/: BUILD
app/infra/canal/conf/: BUILD
app/infra/canal/dao/: BUILD
app/infra/canal/http/: BUILD
app/infra/canal/infoc/: BUILD
app/infra/canal/model/: BUILD
app/infra/canal/service/: BUILD
app/infra/config/cmd/: BUILD  config-service-example.toml  main.go
app/infra/config/conf/: BUILD
app/infra/config/http/: BUILD
app/infra/config/model/: BUILD
app/infra/databus/: README.md
app/infra/databus/cmd/: BUILD
app/infra/databus/conf/: BUILD
app/infra/databus/dao/: BUILD
app/infra/databus/dsn/: BUILD
app/infra/databus/http/: BUILD
app/infra/databus/model/: BUILD
app/infra/databus/service/: BUILD
app/infra/databus/tcp/: BUILD
app/infra/discovery/: README.md
app/infra/discovery/cmd/: BUILD  discovery-example.toml  discovery-idc1-1.toml  discovery-idc1-2.toml  discovery-idc1-3.toml  discovery-idc2-1.toml  discovery-idc2-2.toml  discovery.postman_collection.json
app/infra/discovery/conf/: BUILD
app/infra/discovery/dao/: BUILD
app/infra/discovery/http/: BUILD
app/infra/discovery/model/: BUILD
app/infra/discovery/service/: BUILD
app/infra/notify/cmd/: BUILD
app/infra/notify/conf/: BUILD
app/infra/notify/dao/: BUILD
app/infra/notify/http/: BUILD
app/infra/notify/model/: BUILD
app/infra/notify/notify/: BUILD
app/infra/notify/service/: BUILD
app/interface/main/player/cmd/: BUILD.bazel
app/interface/main/player/dao/: BUILD.bazel
app/interface/main/player/http/: BUILD.bazel
app/job/live-userexp/cmd/: BUILD
app/job/live-userexp/conf/: BUILD
app/job/live-userexp/dao/: BUILD
app/job/live-userexp/model/: BUILD
app/job/live-userexp/service/: BUILD
app/job/main/account-recovery/: README.md
app/job/main/passport-auth/: BUILD
app/job/openplatform/open-sug/api/grpc/v1/: BUILD.bazel
app/service/bbq/common/: BUILD
app/service/bbq/recsys/: CHANGELOG.md
app/service/bbq/recsys-recall/: CHANGELOG.md
app/service/bbq/search/: README.md
app/service/bbq/topic/: CHANGELOG.md
app/service/bbq/video/: CHANGELOG.md
app/service/bbq/video-image/: README.md
app/service/ep/saga-agent/: CHANGELOG.md
app/service/live/common/: BUILD
app/service/main/account-recovery/: Makefile
app/service/main/antispam/: CHANGELOG.md  Makefile
app/service/main/broadcast/: BUILD  README.md
app/service/ops/log-agent/: Makefile
app/service/video/stream-mng/: Makefile
app/service/video/stream-mng/api/v1/: BUILD.bazel
app/tool/bgr/: BUILD  bgr
app/tool/bgr/log/: BUILD
app/tool/bmproto/: CHANGELOG.md  README.md
app/tool/bmproto/bmgen/: BUILD  main.go
app/tool/bmproto/protoc-gen-bm/: BUILD
app/tool/cache/: BUILD
app/tool/cache/common/: BUILD
app/tool/cache/memcached/: BUILD
app/tool/cache/testdata/: BUILD
app/tool/creator/: BUILD
app/tool/gdoc/: BUILD  README.md  gdoc
app/tool/gengo/args/: BUILD
app/tool/gengo/generator/: BUILD
app/tool/gengo/namer/: BUILD
app/tool/gengo/parser/: BUILD
app/tool/gengo/types/: BUILD
app/tool/gorpc/: BUILD
app/tool/gorpc/goparser/: BUILD.bazel
app/tool/gorpc/input/: BUILD.bazel
app/tool/gorpc/model/: BUILD.bazel
app/tool/grpc-http-proxy/: BUILD
app/tool/kratos/: BUILD  init.go
app/tool/liverpc/liverpcgen/: BUILD
app/tool/liverpc/protoc-gen-liverpc/: BUILD
app/tool/mkprow/: BUILD
app/tool/owner/: BUILD
app/tool/protoc-gen-bm/: BUILD  Makefile  README.md
app/tool/protoc-gen-bm/codegenerator/: BUILD
app/tool/protoc-gen-bm/examples/helloworld/api/: BUILD.bazel  helloworld.bm.go  helloworld.hello.md  helloworld.pb.go  helloworld.proto
app/tool/protoc-gen-bm/examples/helloworld/cmd/: BUILD.bazel  main.go
app/tool/protoc-gen-bm/examples/helloworld/service/: BUILD.bazel  service.go
app/tool/protoc-gen-bm/genbm/: BUILD
app/tool/protoc-gen-bm/generator/: BUILD
app/tool/protoc-gen-bm/jsonpb/: BUILD
app/tool/protoc-gen-bm/util/: BUILD
app/tool/saga/cmd/: BUILD.bazel
app/tool/saga/conf/: BUILD.bazel
app/tool/saga/dao/: BUILD.bazel
app/tool/saga/http/: BUILD.bazel
app/tool/saga/model/: BUILD.bazel
app/tool/saga/service/: BUILD
app/tool/saga/service/gitlab/: BUILD.bazel
app/tool/saga/service/mail/: BUILD.bazel
app/tool/warden/: BUILD  README.md  protoc.sh
app/tool/warden/generator/: BUILD
app/tool/warden/goparser/: BUILD
app/tool/warden/types/: BUILD
(+3176 files in other folders)
