load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
)

go_library(
    name = "goparser",
    srcs = ["goparser.go"],
    importpath = "go-common/app/tool/gorpc/goparser",
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
    deps = ["//app/tool/gorpc/model"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
