load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

go_library(
    name = "conf",
    srcs = ["conf.go"],
    importpath = "go-common/app/tool/saga/conf",
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
    deps = [
        "//app/tool/saga/model",
        "//library/cache/memcache",
        "//library/cache/redis",
        "//library/conf",
        "//library/database/hbase.v2:hbase_v2",
        "//library/database/orm",
        "//library/log",
        "//library/net/http/blademaster",
        "//library/net/trace",
        "//library/time",
        "//vendor/github.com/BurntSushi/toml",
        "//vendor/github.com/pkg/errors",
    ],
)

go_test(
    name = "conf_test",
    srcs = ["conf_test.go"],
    embed = [":conf"],
    rundir = ".",
    tags = ["automanaged"],
    deps = ["//vendor/github.com/smartystreets/goconvey/convey"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
