load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

go_library(
    name = "dao",
    srcs = [
        "dao.go",
        "db_wechat.go",
        "hbase.go",
        "http.go",
        "lock.go",
        "mc.go",
        "redis.go",
    ],
    importpath = "go-common/app/tool/saga/dao",
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
    deps = [
        "//app/tool/saga/conf",
        "//app/tool/saga/model",
        "//library/cache/memcache",
        "//library/cache/redis",
        "//library/database/hbase.v2:hbase_v2",
        "//library/database/orm",
        "//library/log",
        "//library/net/http/blademaster",
        "//vendor/github.com/jinzhu/gorm",
        "//vendor/github.com/pkg/errors",
        "//vendor/github.com/tsuna/gohbase/hrpc",
    ],
)

go_test(
    name = "dao_test",
    srcs = [
        "dao_test.go",
        "hbase_test.go",
        "lock_test.go",
        "redis_test.go",
    ],
    embed = [":dao"],
    rundir = ".",
    tags = ["automanaged"],
    deps = [
        "//app/tool/saga/conf",
        "//app/tool/saga/model",
        "//library/cache/redis",
        "//vendor/github.com/smartystreets/goconvey/convey",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
