load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

go_library(
    name = "model",
    srcs = [
        "gitlab.go",
        "gitlab_comment.go",
        "gitlab_mr.go",
        "gitlab_pipeline.go",
        "gitlab_push.go",
        "mail.go",
        "model.go",
        "wechat.go",
    ],
    importpath = "go-common/app/tool/saga/model",
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "model_test",
    srcs = ["model_test.go"],
    embed = [":model"],
    rundir = ".",
    tags = ["automanaged"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
