package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

go_test(
    name = "dao_test",
    srcs = [
        "account_test.go",
        "archive_test.go",
        "creative_test.go",
        "dao_test.go",
        "mysql_test.go",
        "online_test.go",
        "playurl_test.go",
    ],
    embed = [":dao"],
    rundir = ".",
    tags = ["automanaged"],
    deps = [
        "//app/interface/main/player/conf",
        "//app/interface/main/player/model",
        "//vendor/github.com/smartystreets/goconvey/convey",
        "//vendor/gopkg.in/h2non/gock.v1:gock_v1",
    ],
)

go_library(
    name = "dao",
    srcs = [
        "account.go",
        "archive.go",
        "creative.go",
        "dao.go",
        "mysql.go",
        "online.go",
        "playurl.go",
    ],
    importpath = "go-common/app/interface/main/player/dao",
    tags = ["automanaged"],
    deps = [
        "//app/interface/main/player/conf",
        "//app/interface/main/player/model",
        "//library/database/sql",
        "//library/ecode",
        "//library/log",
        "//library/net/http/blademaster",
        "//library/net/metadata",
        "//library/stat/prom",
        "//vendor/github.com/pkg/errors",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
