load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

go_library(
    name = "gitlab",
    srcs = ["gitlab.go"],
    importpath = "go-common/app/tool/saga/service/gitlab",
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
    deps = [
        "//app/tool/saga/model",
        "//library/log",
        "//vendor/github.com/pkg/errors",
        "//vendor/github.com/xanzy/go-gitlab",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "gitlab_test",
    srcs = ["gitlab_test.go"],
    embed = [":gitlab"],
    rundir = ".",
    tags = ["automanaged"],
    deps = [
        "//app/tool/saga/conf",
        "//vendor/github.com/smartystreets/goconvey/convey",
    ],
)
