load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "v1_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "go-common/app/tool/protoc-gen-bm/examples/helloworld/api",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "api",
    srcs = ["helloworld.pb.bm.go"],
    embed = [":v1_go_proto"],
    importpath = "go-common/app/tool/protoc-gen-bm/examples/helloworld/api",
    visibility = ["//visibility:public"],
    deps = ["//library/net/http/blademaster"],
)
