load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "go-common/app/tool/protoc-gen-bm/examples/helloworld/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/tool/protoc-gen-bm/examples/helloworld/api",
        "//app/tool/protoc-gen-bm/examples/helloworld/service",
        "//library/net/http/blademaster",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
