load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "api_go_proto",
    importpath = "go-common/app/job/openplatform/open-sug/api/grpc/v1",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "grpc",
    embed = [":api_go_proto"],
    importpath = "go-common/app/job/openplatform/open-sug/api/grpc/v1",
    visibility = ["//visibility:public"],
)
